--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.96",
+    "mongoose": "^8.14.0",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.27",
     "react": "^19.0.0",
